--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,6 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: feedback-pulgin-demo
+  description: Feedback pluging demo file
   annotations:
     feedback/type: 'MAIL'
     feedback/email-to: padmapriyavedagiri.nagarajan.ext@bayer.com
