--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -3,12 +3,9 @@ kind: Component
 metadata:
   name: feedback-pulgin-demo
   description: Feedback pluging demo file
-  annotations:
-    feedback/type: 'MAIL'
-    feedback/email-to: 'padmapriyavedagiri.nagarajan.ext@bayer.com'
    
 spec:
   type: service
   lifecycle: production
-  owner: User:default/padmapriya-vn
+  owner: User:default/padmapriyavedagiri.nagarajan.ext
   
