--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: Feedback pluging demo file
    
 spec:
-  type: website
+  type: service
   lifecycle: production
   owner: User:default/padmapriyavedagiri.nagarajan.ext
   
